<resources>
    <string name="app_name">Automate Car</string>
    <string name="device_not_supported">Device not supported!</string>
    <string name="device_not_supported_message">Your device does not support Bluetooth, so this app will not work.</string>
    <string name="admin_rights_needed">Admin rights needed</string>
    <string name="need_device_admin_rights_dialog">This app needs device admin rights for controlling screen state
                                                    and for managing keyguard when you are in a car.</string>
    <string name="please_turn_on_admin_rights">After clicking OK you will be directed to screen containing more details
                                                where you will have a possibility to activate device admin right.</string>
    <string name="device_admin_permissions_granted">Device admin permissions granted!</string>
    <string name="force_rotation_rights_needed">System overlay rights needed</string>
    <string name="force_rotation_rights_dialog">This app needs system overlay rights for controlling screen rotation
                                                when you are in a car.</string>
    <string name="please_turn_on_system_overlay_rights">After clicking OK you will be directed to screen containing more details
                                                what is this permission for and you will get a possibility to activate
                                                device admin right.</string>
    <string name="force_rotation_permissions_granted">Permissions for changing screen rotation granted!</string>
    <string name="message_on_disable_admin_rights_request">This app will no loner be able to control screen state.
                                                            Are you sure you want to disable?</string>
    <string name="accessibility_service_needed">Accessibility service needed</string>
    <string name="accessibility_service_dialog">This app needs accessibility service to control screen rotation
                                                in each app separately.</string>
    <string name="please_turn_on_accessibility_service">After clicking OK you will be directed to screen containing more details
                                                Please enable AutomateCar.</string>
    <string name="accessibility_service_enabled">Accessibility service has been enabled!</string>
    <string name="service_running">Service running</string>
    <string name="stop_service">Stop service</string>
    <string name="car_connected">Car connected</string>
    <string name="car_disconnected">Car disconnected</string>
    <string name="in_car_options">In-car options</string>
    <string name="automate_service_running">Automate Car service running</string>
    <string name="basic_options">Basic options</string>
    <string name="other_options">Other options</string>
    <string name="change_other_options">Change other options</string>
    <string name="change_mobile_data_state_in_car">Change mobile data state</string>
    <string name="mobile_data_on">Turn on mobile data</string>
    <string name="mobile_data_off">Turn off mobile data</string>
    <string name="change_wifi_state_in_car">Change Wi-Fi state</string>
    <string name="wifi_on">Turn on Wi-Fi</string>
    <string name="wifi_off">Turn off Wi-Fi</string>
    <string name="mobile_networks">Mobile networks</string>
    <string name="network_mode_in">Set network mode when in car</string>
    <string name="network_mode_out">Set network mode after leaving car</string>
    <string name="set_media_volume_in_car">Set media volume</string>
    <string name="set_volume_in">Set media volume when in car</string>
    <string name="set_volume_in_level">Choose in car volume level</string>
    <string name="set_volume_out">Set media volume after leaving car</string>
    <string name="set_volume_out_level">Choose volume level after leaving car</string>
    <string name="trigger">Trigger</string>
    <string name="select_trigger">Select trigger</string>
    <string name="select_bluetooth_devices">Select Bluetooth devices</string>
    <string name="select_nfc_tags">Select NFC tags</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="nfc">NFC</string>
    <string name="dismiss_lock_screen">Dismiss lock screen</string>
    <string name="auto_rotation">Auto rotation</string>
    <string name="force_auto_rotation">Force auto-rotation</string>
    <string name="rotation_excluded_apps">Excluded apps</string>
    <string name="check_if_in_pocket">Check if device is in pocket</string>
    <string name="turn_screen_off_disconnected">Turn screen off when disconnected</string>
    <string name="cancellation_dialog">Cancellation dialog</string>
    <string name="show_cancel_dialog">Show dialog to cancel operation</string>
    <string name="dialog_timeout">Dialog duration</string>
    <string name="action_dialog_timeout">Continue operation on dialog timeout</string>
    <string name="launch_apps">Launch apps</string>
    <string name="apps_to_launch">Select apps to launch</string>
    <string name="sleep_times">Sleep times between launching apps</string>
    <string name="max_volume">Max media volume</string>
    <string name="control_media">Control media</string>
    <string name="play_music">Play music when connected</string>
    <string name="play_music_on_a2dp">Play music only when connected to A2DP</string>
    <string name="other_features">Other features</string>
    <string name="show_navigation">Open navigation if it is active</string>
    <string name="service_started">Automate Car service started</string>
    <string name="service_stopped">Automate Car service stopped</string>
    <string name="duration_time_null_alert">Duration time cannot equals 0 seconds!</string>
    <string name="sleep_time_null_alert">Sleep time cannot equals 0 seconds!</string>
    <string name="max_min_seconds_dialog_message">Please input value between %1$d and %2$d (in seconds)</string>
    <string name="select_apps">Select Apps</string>
    <string name="select_music_player">Select Music Player</string>
    <string name="select_activity">Select Activity</string>
    <string name="loading_app_list">Loading Apps</string>
    <string name="loading_activities">Loading Activities</string>
    <string name="add_apps">Add apps</string>
    <string name="drag_apps_to_change_order">Drag apps icons to change order</string>
    <string name="car_detected_desc">Car bluetooth set has been connected. Do you want to enable car mode?</string>
    <string name="delete_app_question">Delete app?</string>
    <string name="sure_about_deleting_app_question">Are you sure you want to delete this app?</string>
    <string name="clear_selection">Clear selection</string>
    <string name="no_activities_found">No activities found</string>
    <string name="accessibility_service_description">Accessibility service is used to manage forced
                                                    screen rotation</string>
    <string name="accessibility_service_label">Screen rotation accessibility service</string>
    <string name="no_system_overlay_permission">No system overlay permission! Auto rotation will not work!</string>
    <string name="exclude_from_forcing_auto_rotation">Exclude from forcing auto rotation</string>
    <string name="no_player_selected">No specified player selected</string>
    <string name="connectivity">Connectivity</string>
    <string name="connectivity_root_required">Connectivity (ROOT required on Android 5.0 and higher)</string>
    <string name="root_features">Root features</string>
    <string name="dock_trigger">Dock trigger</string>
    <string name="wireless_loading">Wireless loading</string>
    <string name="current_level">Current level: %1$d\u002F%2$d</string>
    
    
    
    <string name="accidental_disconnection_protection">Accidental disconnection protection</string>
    <string name="wait_for_reconnection">Wait for reconnection</string>
    <string name="wait_time">Set wait time</string>
    <string name="navigation_stop">Navigation cancellation</string>
    <string name="show_dialog_to_confirm_navi_stop">Show dialog to confirm navigation stop</string>
    <string name="cancel_navi_on_dialog_timeout">Cancel navigation on dialog timeout</string>
    <string name="pause_music">Pause music when disconnected</string>
    <string name="set_media_volume_out_car">Set media volume</string>
    <string name="close_apps">Close apps</string>
    <string name="apps_to_close">Select apps to close</string>
    <string name="show_home_screen">Back to home screen at the end</string>

    <string name="cancel_navi_desc">Car bluetooth set has been disconnected. Do you want to stop navigation?</string>



</resources>
