<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->

    <PreferenceCategory android:title="@string/trigger">

        <MultiSelectListPreference
            android:title="@string/select_bluetooth_devices"
            android:key="select_bluetooth_devices" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/check_nfc_tag"
            android:key="check_nfc_tag" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/check_wireless_power_supply"
            android:key="check_wireless_power_supply" />

    </PreferenceCategory>


    <Preference
        android:layout="@layout/preference_divider"
        android:selectable="false"/>

    <PreferenceCategory android:title="@string/cancellation_dialog">

        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/show_cancel_dialog"
            android:key="show_cancel_dialog" />

        <pl.maslanka.automatecar.userinputfilter.EditTextIntegerPreference
            android:dependency="show_cancel_dialog"
            android:defaultValue="10"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:title="@string/dialog_timeout"
            android:key="dialog_timeout" />

        <CheckBoxPreference
            android:dependency="show_cancel_dialog"
            android:defaultValue="true"
            android:title="@string/action_dialog_timeout"
            android:key="action_dialog_timeout" />

    </PreferenceCategory>

    <Preference
        android:layout="@layout/preference_divider"
        android:selectable="false"/>

    <PreferenceCategory android:title="@string/launch_apps">

        <Preference
            android:title="@string/apps_to_launch"
            android:key="apps_to_launch" />

        <pl.maslanka.automatecar.userinputfilter.EditTextIntegerPreference
            android:defaultValue="8"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:title="@string/sleep_times"
            android:key="sleep_times" />

    </PreferenceCategory>

    <Preference
        android:layout="@layout/preference_divider"
        android:selectable="false"/>

    <PreferenceCategory android:title="@string/control_media">

        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/play_music"
            android:key="play_music" />

        <Preference
            android:dependency="play_music"
            android:title="@string/select_music_player"
            android:key="select_music_player" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="play_music"
            android:title="@string/play_music_on_a2dp"
            android:key="play_music_on_a2dp" />

    </PreferenceCategory>

    <Preference
        android:layout="@layout/preference_divider"
        android:selectable="false"/>


    <PreferenceCategory android:title="@string/auto_rotation">

        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/force_auto_rotation"
            android:key="force_auto_rotation" />


        <Preference
            android:dependency="force_auto_rotation"
            android:title="@string/rotation_excluded_apps"
            android:key="rotation_excluded_apps" />

    </PreferenceCategory>

    <Preference
        android:layout="@layout/preference_divider"
        android:selectable="false"/>


    <PreferenceCategory  android:title="@string/other_features">


        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/check_if_in_pocket"
            android:key="check_if_in_pocket" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/dismiss_lock_screen"
            android:key="dismiss_lock_screen" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:title="@string/show_navigation"
            android:key="show_navi" />

    </PreferenceCategory>


</PreferenceScreen>