<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <PreferenceCategory android:title="@string/root_features">

        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/dismiss_lock_screen"
            android:key="dismiss_lock_screen" />

    </PreferenceCategory>

    <Preference
        android:layout="@layout/preference_divider"
        android:selectable="false"/>

    <PreferenceCategory android:title="@string/dock_trigger">

        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/nfc"
            android:key="nfc_dock_trigger" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:title="@string/wireless_loading"
            android:key="wireless_loading_dock_trigger" />



    </PreferenceCategory>

    <Preference
        android:layout="@layout/preference_divider"
        android:selectable="false"/>



</PreferenceScreen>