<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <Switch
            android:text="@string/automate_service_running"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/automate_service_running"
            android:padding="15dp"
            android:textSize="15sp"/>

    </FrameLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/car_connected">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/car_connected_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/in_car" />

                    <TextView
                        android:id="@+id/car_connected_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/car_connected_image"
                        android:paddingBottom="5dp"
                        android:text="@string/car_connected"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/car_connected_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/car_connected_title"
                        android:layout_toRightOf="@+id/car_connected_image"
                        android:text="Free android tutorials and examples for beginners and expert."
                        android:textColor="#8b8b8b" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/car_disconnected">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/car_disconnected_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/out_car" />

                    <TextView
                        android:id="@+id/car_disconnected_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/car_disconnected_image"
                        android:paddingBottom="5dp"
                        android:text="@string/car_disconnected"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/car_disconnected_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/car_disconnected_title"
                        android:layout_toRightOf="@+id/car_disconnected_image"
                        android:text="Free android tutorials and examples for beginners and expert."
                        android:textColor="#8b8b8b" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/in_car_options">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/in_car_options_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/in_car_options" />

                    <TextView
                        android:id="@+id/in_car_options_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/in_car_options_image"
                        android:paddingBottom="5dp"
                        android:text="@string/in_car_options"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/in_car_options_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/in_car_options_title"
                        android:layout_toRightOf="@+id/in_car_options_image"
                        android:text="Free android tutorials and examples for beginners and expert."
                        android:textColor="#8b8b8b" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="4dp"
                card_view:cardUseCompatPadding="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/other_options">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#fff"
                    android:padding="16dp">

                    <ImageView
                        android:id="@+id/other_options_image"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="18dp"
                        android:src="@drawable/other_options" />

                    <TextView
                        android:id="@+id/other_options_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/other_options_image"
                        android:paddingBottom="5dp"
                        android:text="@string/other_options"
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/other_options_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/other_options_title"
                        android:layout_toRightOf="@+id/other_options_image"
                        android:text="Free android tutorials and examples for beginners and expert."
                        android:textColor="#8b8b8b" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>